# rk3566-yolov8

./: .gitignore  .gitmodules  1.txt  CMakeLists.txt  README.md  cam_yolo.cpp  cam_yolo_exe.cpp  v4l2_capture.cpp  v4l2_capture.hpp
